@@ -7,6 +7,8 @@ current
 Features added
 --------------
 
+* Exslt:regexp implementation for XSLT based on the Python 're' module
+
 * HTMLParser for parsing (broken) HTML
 
 * XMLDTDID function parses XML into tuple (root node, ID dict) based on xml:id
